<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_action_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/bottom_home_text" />
    <item
        android:id="@+id/bottom_action_follower"
        android:icon="@drawable/ic_heart_empty"
        android:title="@string/menu_title_follower"
       />

    <item
        android:id="@+id/bottom_action_new_post"
        android:icon="@drawable/ic_plus_menu"
        android:title="@string/menu_title_new_post"
      />
    <item
        android:id="@+id/bottom_action_friends"
        android:icon="@drawable/ic_friends"
        android:title="@string/menu_title_friends" />
    <item
        android:id="@+id/bottom_action_profile"
        android:icon="@drawable/ic_user"
        android:title="@string/menu_title_profile" />


</menu>